# fotema-rust-faces

./: Cargo.toml
src/: blazeface.rs  builder.rs  detection.rs  model_repository.rs  mtcnn.rs  ort.rs
